--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="loginstyle.css">
-<title> CSS Login Screen Tutorial </title>
+<title> Login </title>
 </head>
 <body>
   <body>
